[gd_scene load_steps=8 format=3 uid="uid://176k5y4ex5wt"]

[ext_resource type="Script" path="res://tests/distances/distances.gd" id="1_b77cs"]
[ext_resource type="Script" path="res://logic/snake.gd" id="2_04wg5"]
[ext_resource type="PackedScene" uid="uid://dtfcnot1wruor" path="res://scenes/block.tscn" id="3_j6nth"]
[ext_resource type="PackedScene" uid="uid://chp3nxcypsk7j" path="res://scenes/HeadColiisionDetector.tscn" id="4_qe75a"]
[ext_resource type="Script" path="res://logic/Inputs.gd" id="5_kv5sr"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cg2u3"]
properties/0/path = NodePath(".:motion")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:angle")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:motion_enabled")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rjqql"]
properties/0/path = NodePath(".:synced_position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:synced_rotation")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="Distances" type="Node2D"]
script = ExtResource("1_b77cs")

[node name="snake" type="Node2D" parent="."]
script = ExtResource("2_04wg5")
signle_player = true

[node name="snake_blocks" type="Node2D" parent="snake" groups=["snake_blocks"]]

[node name="head" parent="snake/snake_blocks" node_paths=PackedStringArray("snake") groups=["snake_blocks", "snake_head"] instance=ExtResource("3_j6nth")]
collision_layer = 4
collision_mask = 22
snake = NodePath("../..")

[node name="HeadColiisionDetector" parent="snake/snake_blocks/head" node_paths=PackedStringArray("snake") instance=ExtResource("4_qe75a")]
snake = NodePath("../../..")

[node name="Inputs" type="Node2D" parent="snake"]
script = ExtResource("5_kv5sr")

[node name="InputsSync" type="MultiplayerSynchronizer" parent="snake/Inputs"]
replication_config = SubResource("SceneReplicationConfig_cg2u3")

[node name="Synchronizer" type="MultiplayerSynchronizer" parent="snake"]
replication_config = SubResource("SceneReplicationConfig_rjqql")

[node name="ChainDoublingTimer" type="Timer" parent="snake"]
one_shot = true

[connection signal="timeout" from="snake/ChainDoublingTimer" to="snake" method="_on_chain_doubling_timer_timeout"]
